--- a/index.html
+++ b/index.html
@@ -12,29 +12,27 @@
   <body>
     <div class="container">
       <div class="information">
-        <h1>Get <span>insight</span> that help your business grow.</h1>
+        <h2>Get <span>insights</span> that help your business grow.</h2>
         <p>
-          Discover the basics of data analytics and make better decisions
-          regarding revenue,customer experience, and overall effiency.
+          Discover the benefits of data analytics and make better decisions
+          regarding revenue,customer experience, and overall efficiency.
         </p>
-        <div class="stat">
-          <div class="companies">
-            <h1>10k+</h1>
-            <p>companies</p>
+        <div class="stats">
+          <div class="stat">
+            <h3>10k+</h3>
+            <p>COMPANIES</p>
           </div>
-          <div class="templates">
-            <h1>314</h1>
-            <p>Templates</p>
+          <div class="stat">
+            <h3>314</h3>
+            <p>TEMPLATES</p>
           </div>
-          <div class="Queries">
-            <h1>12M+</h1>
-            <p>companies</p>
+          <div class="stat">
+            <h3>12M+</h3>
+            <p>QUERIES</p>
           </div>
         </div>
       </div>
-      <div class="picture">
-        <img src="header-image.jpg" alt="ofice staffs" />
-      </div>
+      <img src="header-image.jpg" alt="ofice staffs" class="image" />
     </div>
   </body>
 </html>
