--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
       </div>
       <img src="header-image.jpg" alt="ofice staffs" class="image" />
+      <div class="pink"></div>
     </div>
   </body>
 </html>
